<resources>
    <string name="app_name">Sanguine</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">Sanguine</string>
    <string name="emptyString" />
    <string name="title_activity_register">Register</string>
    <string name="namedetail">Name</string>
    <string name="emailiddetail">E-mail Address</string>
    <string name="phonedetail">Phone Number</string>
    <string name="usernamedetail">User Name</string>
    <string name="passworddetail">Password</string>
    <string name="repeatpassdetail">Repeat Password</string>
    <string name="signupdetail">Sign Up</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Sign out</string>
    <string name="title_activity_forgotpassword">forgotpassword</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_donation_history">Donation History</string>
</resources>
