<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="teamsanguine.sanguine.Register">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/namedetail"
        android:id="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/etname"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:width="320dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emailiddetail"
        android:id="@+id/email"
        android:layout_below="@+id/etname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/etemail"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/etname"
        android:layout_alignStart="@+id/etname"
        android:width="320dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phonedetail"
        android:id="@+id/phone"
        android:layout_below="@+id/etemail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/etphone"
        android:layout_below="@+id/phone"
        android:layout_alignLeft="@+id/etemail"
        android:layout_alignStart="@+id/etemail"
        android:width="320dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usernamedetail"
        android:id="@+id/username"
        android:layout_below="@+id/etphone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etusername"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/etphone"
        android:layout_alignStart="@+id/etphone"
        android:width="320dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/passworddetail"
        android:id="@+id/password"
        android:layout_below="@+id/etusername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etpassword"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:width="320dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/repeatpassdetail"
        android:id="@+id/repeatpassword"
        android:layout_below="@+id/etpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etrepeatpass"
        android:layout_below="@+id/repeatpassword"
        android:layout_alignLeft="@+id/etpassword"
        android:layout_alignStart="@+id/etpassword"
        android:width="320dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupdetail"
        android:id="@+id/signup"
        android:layout_below="@+id/etrepeatpass"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

</ScrollView>